{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 1,
  "lineage": "2da191de-7743-c0f9-1007-081616a78da7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/myvm669_z1",
            "internal_domain_name_suffix": "ipygtxeqycgubeh43ghmfj2dpg.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/myVM-ip",
                "subnet_id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVM-vnet/subnets/default"
              }
            ],
            "location": "westus2",
            "mac_address": "00-22-48-7A-18-8E",
            "name": "myvm669_z1",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "myResourceGroup",
            "tags": {
              "environment": "Production"
            },
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Compute/virtualMachines/myVM"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/myvm669_z1|/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myVM-nsg",
            "network_interface_id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/myvm669_z1",
            "network_security_group_id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myVM-nsg",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myVM-nsg",
            "location": "westus2",
            "name": "myVM-nsg",
            "resource_group_name": "myResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myVM-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "myVM-nsg",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "myResourceGroup",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-7",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/myVM-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.83.203.156",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "myVM-ip",
            "resource_group_name": "myResourceGroup",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            },
            "timeouts": {
            },
            "zones": [
              "1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-9",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVM-vnet/subnets/default",
            "name": "default",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myResourceGroup",
            "timeouts": {
            },
            "virtual_network_name": "myVM-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-8",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "dc69f043-c090-408d-90fe-e98ec2a7837e",
            "id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVM-vnet",
            "location": "westus2",
            "name": "myVM-vnet",
            "resource_group_name": "myResourceGroup",
            "subnet": [
              {
                "address_prefix": "10.2.0.0/24",
                "id": "/subscriptions/6e4d4d41-20a6-4801-8eec-c769d870e333/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVM-vnet/subnets/default",
                "name": "default"
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": {
            }
          }
        }
      ]
    }
  ]
}